Updated Models for MVC in MySQL DB

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,13 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation 'mysql:mysql-connector-java:8.0.30'
+
+    // Gson Library
+    implementation 'com.google.code.gson:gson:2.9.1'
+
 }
 
 application {
