--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.codehaus.groovy:groovy'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
