--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "guardian.backend.App",
+            "projectName": "app"
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-GuardianApplication<app>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
